--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
   "engineStrict": true,
   "dependencies": {
     "contentful": "4.6.1",
-    "jquery": "3.2.1",
-    "marked": "^0.4.0",
+    "jquery": "^3.4.1",
+    "marked": "^0.6.2",
     "moment": "^2.18.1",
-    "node-sass-chokidar": "1.3.0",
+    "node-sass": "^4.12.0",
     "normalize.css": "7.0.0",
-    "react": "^16.0.0",
+    "react": "^16.8.6",
     "react-dom": "^16.0.0",
     "react-loading": "0.1.4",
     "react-router-dom": "4.2.2"
   },
   "devDependencies": {
-    "react-scripts": "1.1.4"
+    "react-scripts": "^3.0.1"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
@@ -31,5 +31,17 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "deploy-prod": "npm run build && aws s3 sync build/ s3://andreatakamiya.com --delete --grants read=uri=http://acs.amazonaws.com/groups/global/AllUsers"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
