--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "jquery": "3.4.1",
     "marked": "^0.7.0",
     "moment": "^2.24.0",
-    "node-sass": "4.12.0",
+    "node-sass": "^4.13.1",
     "normalize.css": "7.0.0",
     "react": "16.8.6",
     "react-dom": "16.4.2",
@@ -21,7 +21,7 @@
     "react-router-dom": "4.2.2"
   },
   "devDependencies": {
-    "react-scripts": "3.0.1"
+    "react-scripts": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
